Fixes mobile menu/lamp overflow

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -278,7 +278,7 @@ footer {
 
 .lamp-mobile {
   height: 80px;
-  width: 100%;
+  width: 87px;
   margin: -36px auto 16px 32px;
 
   background-image: url("../img/lamp.png");
